--- a/internal/web/translation/translate.en_US.toml
+++ b/internal/web/translation/translate.en_US.toml
@@ -319,6 +319,8 @@
 "subUIDesc" = "Make sure to paste your html codes to /etc/x-ui/html/sub.html"
 "subShowInfo" = "Show Usage Info"
 "subShowInfoDesc" = "The remaining traffic and date will be displayed in the client apps."
+"clientSynchronization" = "Client Synchronization"
+"clientSynchronizationDesc" = "Enable/disable client synchronization for subId"
 "subURI" = "Reverse Proxy URI"
 "subURIDesc" = "The URI path of the subscription URL for use behind proxies."
 "fragment" = "Fragmentation"
