--- a/internal/web/translation/translate.ru_RU.toml
+++ b/internal/web/translation/translate.ru_RU.toml
@@ -317,6 +317,8 @@
 "subEncryptDesc" = "Шифровать возвращенные конфиги в подписке"
 "subShowInfo" = "Показать информацию об использовании"
 "subShowInfoDesc" = "Отображать остаток трафика и дату окончания после имени конфигурации"
+"clientSynchronization" = "Синхронизация клиентов"
+"clientSynchronizationDesc" = "Включить/отключить синхронизацию клиентов для subId"
 "subURI" = "URI обратного прокси"
 "subURIDesc" = "Изменить базовый URI URL-адреса подписки для использования за прокси-серверами"
 "subUI" = "Пользовательский шаблон подписки"
