--- a/internal/web/translation/translate.zh_CN.toml
+++ b/internal/web/translation/translate.zh_CN.toml
@@ -316,6 +316,8 @@
 "subEncryptDesc" = "订阅服务返回的内容将采用 Base64 编码"
 "subShowInfo" = "显示使用信息"
 "subShowInfoDesc" = "客户端应用中将显示剩余流量和日期信息"
+"clientSynchronization" = "客户端同步"
+"clientSynchronizationDesc" = "启用/禁用 subId 的客户端同步"
 "subURI" = "反向代理 URI"
 "subURIDesc" = "用于代理后面的订阅 URL 的 URI 路径"
 "fragment" = "分片"
