--- a/internal/web/translation/translate.uk_UA.toml
+++ b/internal/web/translation/translate.uk_UA.toml
@@ -316,6 +316,8 @@
 "subEncryptDesc" = "Повернений вміст послуги підписки матиме кодування Base64."
 "subShowInfo" = "Показати інформацію про використання"
 "subShowInfoDesc" = "Залишок трафіку та дата відображатимуться в клієнтських програмах."
+"clientSynchronization" = "Синхронізація клієнтів"
+"clientSynchronizationDesc" = "Увімкнути/вимкнути синхронізацію клієнта для subId"
 "subURI" = "URI зворотного проксі"
 "subURIDesc" = "URI до URL-адреси підписки для використання за проксі."
 "fragment" = "Фрагментація"
