--- a/internal/web/translation/translate.vi_VN.toml
+++ b/internal/web/translation/translate.vi_VN.toml
@@ -316,6 +316,8 @@
 "subEncryptDesc" = "Mã hóa các cấu hình được trả về trong gói đăng ký"
 "subShowInfo" = "Hiển thị thông tin sử dụng"
 "subShowInfoDesc" = "Hiển thị lưu lượng truy cập còn lại và ngày sau tên cấu hình"
+"clientSynchronization" = "Đồng bộ hóa máy khách"
+"clientSynchronizationDesc" = "Bật/tắt đồng bộ hóa máy khách cho subId"
 "subURI" = "URI proxy trung gian"
 "subURIDesc" = "Thay đổi URI cơ sở của URL gói đăng ký để sử dụng cho proxy trung gian"
 "fragment" = "Sự phân mảnh"
