--- a/internal/web/translation/translate.zh_TW.toml
+++ b/internal/web/translation/translate.zh_TW.toml
@@ -316,6 +316,8 @@
 "subEncryptDesc" = "訂閱服務返回的內容將採用 Base64 編碼"
 "subShowInfo" = "顯示使用資訊"
 "subShowInfoDesc" = "客戶端應用中將顯示剩餘流量和日期資訊"
+"clientSynchronization" = "客戶端同步"
+"clientSynchronizationDesc" = "啟用/禁用 subId 的客戶端同步"
 "subURI" = "反向代理 URI"
 "subURIDesc" = "用於代理後面的訂閱 URL 的 URI 路徑"
 "fragment" = "分片"
